<?xml version="1.0"?>
<package format="2">
  <name>armadillo2</name>
  <version>1.0.0</version>
  <description>The armadillo2 stack</description>

  <maintainer email="support@robotican.net">RobotICan</maintainer>


  <license>MIT</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
 <url type="website">http://wiki.ros.org/armadillo2</url> 


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roslaunch</build_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
