<?xml version="1.0"?>
<package>
  <name>armadillo2_hw</name>
  <version>0.0.0</version>
  <description>The armadillo2_hw package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="armadillo2@todo.todo">armadillo2</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/armadillo_hw</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>dynamixel_sdk</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>bms_interface</build_depend>
  <build_depend>dxl_interface</build_depend>
  <build_depend>ric_interface</build_depend>
  <build_depend>roboteq_control</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>dynamixel_sdk</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <run_depend>controller_manager</run_depend>
    <run_depend>bms_interface</run_depend>
  <run_depend>dxl_interface</run_depend>
  <run_depend>ric_interface</run_depend>
  <run_depend>roboteq_control</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
