<?xml version="1.0"?>
<package format="2">
  <name>armadillo2_services</name>
  <version>0.0.0</version>
  <description>The armadillo2_services package open ROS services for basic operations</description>

    <maintainer email="support@robotican.net">RobotICan</maintainer>
    
    <url type="website">www.robotican.net</url>
    
    <license>MIT</license>
    
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>armadillo2_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>armadillo2_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
