<?xml version="1.0"?>
<package format="2">
    <name>dxl_interface</name>
    <version>0.0.0</version>
    <description>The dxl_interface package is a driver between ROS and dxl motors</description>
    
    <maintainer email="support@robotican.net">RobotICan</maintainer>
    
    <url type="website">www.robotican.net</url>
    
    <license>MIT</license>  
    
    <buildtool_depend>catkin</buildtool_depend>
    
    <build_depend>dynamixel_sdk</build_depend>
    
    <exec_depend>dynamixel_sdk</exec_depend>
    
    <export>
        
    </export>
</package>
