<?xml version="1.0"?>
<package format="2">
    <name>filters</name>
    <version>0.0.0</version>
    <description>The filters package constains low pass filter</description>
    
    <maintainer email="support@robotican.net">RobotICan</maintainer>
    
    <url type="website">www.robotican.net</url>
    
    <license>MIT</license>
    
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_export_depend>roscpp</build_export_depend>
    <exec_depend>roscpp</exec_depend>
    
    
    <export>
        
    </export>
</package>
